# LazyMeal

./: .dockerignore  API Docs.md  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json
.github/workflows/: security-ci.yml
backend/: Dockerfile  README.md  package.json  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  auth.py  restaurants.py  watchlist.py
backend/app/core/: auth.py  cache.py  config.py  security.py
backend/app/db/: bootstrap.py  session.py
backend/app/repositories/: __init__.py  restaurant_repository.py  user_repository.py  watchlist_repository.py
backend/app/schemas/: auth.py  restaurant.py  watchlist.py
backend/app/services/: __init__.py  auth_service.py  google_places_service.py  restaurant_service.py  watchlist_service.py
backend/prisma/: schema.prisma
backend/prisma/migrations/20250707114756_init_database/: migration.sql
backend/prisma/migrations/20250711171327_/: migration.sql
backend/prisma/migrations/20260212090000_performance_indexes/: migration.sql
backend/src/: queryParser.js  server.js
backend/src/controllers/: restaurant.js  restaurantController.js  watchlist.js  watchlistController.js
backend/src/plugins/: prismaPlugin.js
backend/src/prisma/: schema.prisma
backend/src/routes/: restaurant.js  watchlist.js
backend/src/services/: googleMapsService.js  restaurantService.js  watchlistService.js
backend/tests/: test_security.py
docs/: API Docs.md  security-review.md
frontend/: Dockerfile  package.json  vite.config.js
(+16 files in other folders)
